base/services/ms-order-management/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-order-management
  labels:
    app: ms-order-management
    app.kubernetes.io/name: ms-order-management
spec:
  type: ClusterIP
  ports:
    - port: 3005
      targetPort: 3005
      protocol: TCP
      name: http
  selector:
    app: ms-order-management
